--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -33,14 +33,20 @@
         <button class="cta-btn">Explore More</button>
     </section>
 
-    <content>
+    <div class="content">
         <div class="card">
             <img src="./imgs/karathe kid.jpg">
+        </div>
+        <div class="card">
             <img src="./imgs/leo.jpg">
+        </div>
+        <div class="card">
             <img src="./imgs/weeknd.jpg">
+        </div>
+        <div class="card">
             <img src="./imgs/batman.jpg">
         </div>
-    </content>
+    </div>
 
 </body>
 </html>
